--- a/job/templates/job/job_detail.html
+++ b/job/templates/job/job_detail.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col-xl-12">
         <div class="bradcam_text">
-          <h3>Software Engineer</h3>
+          <h3>{{job_detail}}</h3>
         </div>
       </div>
     </div>
@@ -24,13 +24,13 @@
                 <img src="img/svg_icon/1.svg" alt="" />
               </div>
               <div class="jobs_conetent">
-                <a href="#"><h4>Software Engineer</h4></a>
+                <a href="#"><h4>{{job_detail}}</h4></a>
                 <div class="links_locat d-flex align-items-center">
                   <div class="location">
                     <p><i class="fa fa-map-marker"></i> California, USA</p>
                   </div>
                   <div class="location">
-                    <p><i class="fa fa-clock-o"></i> Part-time</p>
+                    <p><i class="fa fa-clock-o"></i>{{job_detail.job_type}}</p>
                   </div>
                 </div>
               </div>
@@ -47,58 +47,7 @@
         <div class="descript_wrap white-bg">
           <div class="single_wrap">
             <h4>Job description</h4>
-            <p>
-              There are many variations of passages of Lorem Ipsum available,
-              but the majority have suffered alteration in some form, by
-              injected humour, or randomised words which don't look even
-              slightly believable. If you are going to use a passage of Lorem
-              Ipsum, you need to be sure there isn't anything embarrassing.
-            </p>
-            <p>
-              Variations of passages of lorem Ipsum available, but the majority
-              have suffered alteration in some form, by injected humour, or
-              randomised words which don't look even slightly believable. If you
-              are going to use a passage of Lorem Ipsum, you need to be sure
-              there isn't anything embarrassing.
-            </p>
-          </div>
-          <div class="single_wrap">
-            <h4>Responsibility</h4>
-            <ul>
-              <li>
-                The applicants should have experience in the following areas.
-              </li>
-              <li>Have sound knowledge of commercial activities.</li>
-              <li>Leadership, analytical, and problem-solving abilities.</li>
-              <li>
-                Should have vast knowledge in IAS/ IFRS, Company Act, Income
-                Tax, VAT.
-              </li>
-            </ul>
-          </div>
-          <div class="single_wrap">
-            <h4>Qualifications</h4>
-            <ul>
-              <li>
-                The applicants should have experience in the following areas.
-              </li>
-              <li>Have sound knowledge of commercial activities.</li>
-              <li>Leadership, analytical, and problem-solving abilities.</li>
-              <li>
-                Should have vast knowledge in IAS/ IFRS, Company Act, Income
-                Tax, VAT.
-              </li>
-            </ul>
-          </div>
-          <div class="single_wrap">
-            <h4>Benefits</h4>
-            <p>
-              There are many variations of passages of Lorem Ipsum available,
-              but the majority have suffered alteration in some form, by
-              injected humour, or randomised words which don't look even
-              slightly believable. If you are going to use a passage of Lorem
-              Ipsum, you need to be sure there isn't anything embarrassing.
-            </p>
+            <p>{{job_detail.description}}</p>
           </div>
         </div>
         <div class="apply_job_form white-bg">
@@ -169,11 +118,14 @@
           </div>
           <div class="job_content">
             <ul>
-              <li>Published on: <span>12 Nov, 2019</span></li>
-              <li>Vacancy: <span>2 Position</span></li>
-              <li>Salary: <span>50k - 120k/y</span></li>
+              <li>
+                Published on:
+                <span>{{job_detail.published_at|date:'d M o'}}</span>
+              </li>
+              <li>Vacancy: <span>{{job_detail.vacancy}} Position</span></li>
+              <li>Salary: <span>{{job_detail.salary}}k/y</span></li>
               <li>Location: <span>California, USA</span></li>
-              <li>Job Nature: <span> Full-time</span></li>
+              <li>Job Nature: <span> {{job_detail.job_type}}</span></li>
             </ul>
           </div>
         </div>
