--- a/job/templates/job/job_list.html
+++ b/job/templates/job/job_list.html
@@ -116,16 +116,7 @@
               <div class="col-md-6">
                 <h4>Job Listing</h4>
               </div>
-              <div class="col-md-6">
-                <div class="serch_cat d-flex justify-content-end">
-                  <select>
-                    <option data-display="Most Recent">Most Recent</option>
-                    <option value="1">Marketer</option>
-                    <option value="2">Wordpress</option>
-                    <option value="4">Designer</option>
-                  </select>
-                </div>
-              </div>
+              <div class="col-md-6"></div>
             </div>
           </div>
         </div>
@@ -172,26 +163,33 @@
             </div>
             {% endfor %}
           </div>
+          {% if job_list.has_other_pages %}
           <div class="row">
             <div class="col-lg-12">
               <div class="pagination_wrap">
                 <ul>
+                  {% if job_list.has_previous %}
                   <li>
-                    <a href="#"> <i class="ti-angle-left"></i> </a>
+                    <a href="?page={{job_list.previous_page_number}}">
+                      <i class="ti-angle-left"></i>
+                    </a>
                   </li>
+                  {% endif %} {% for i in job_list.paginator.page_range %}
                   <li>
-                    <a href="#"><span>01</span></a>
+                    <a href="?page={{i}}"><span>{{i}}</span></a>
                   </li>
+                  {% endfor %} {% if job_list.has_next %}
                   <li>
-                    <a href="#"><span>02</span></a>
+                    <a href="?page={{job_list.next_page_number}}">
+                      <i class="ti-angle-right"></i>
+                    </a>
                   </li>
-                  <li>
-                    <a href="#"> <i class="ti-angle-right"></i> </a>
-                  </li>
+                  {% endif %}
                 </ul>
               </div>
             </div>
           </div>
+          {% endif %}
         </div>
       </div>
     </div>
