--- a/job/templates/job/job_detail.html
+++ b/job/templates/job/job_detail.html
@@ -54,7 +54,7 @@
           <h4>Apply for the job</h4>
 
           <form method="POST" enctype="multipart/form-data">
-            {% csrf_token %} {% bootstrap_form form %} {% buttons %}
+            {% csrf_token %} {% bootstrap_form form1 %} {% buttons %}
             <button class="boxed-btn3 w-100" type="submit">Apply Now</button>
             {% endbuttons %}
           </form>
