--- a/accounts/templates/registration/password_reset_confirm.html
+++ b/accounts/templates/registration/password_reset_confirm.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block body %} {% if validlink %}
+{% extends "base_generic.html" %} {% block content %} {% if validlink %}
 <p>Please enter (and confirm) your new password.</p>
 <form action="" method="post">
   {% csrf_token %}
