--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -35,7 +35,7 @@
             
           </div>
           <div class="p-5">
-            <a href="" class="boxed-btn3 w-100">Edit Profile</a>
+            <a href="{% url 'accounts:profile_edit' %}" class="boxed-btn3 w-100">Edit Profile</a>
           </div>
         </div>
 
