--- a/accounts/templates/accounts/profile_edit.html
+++ b/accounts/templates/accounts/profile_edit.html
@@ -13,9 +13,12 @@
         <div class="apply_job_form white-bg">
           <h4>Edit Profile</h4>
           <form method="POST" enctype="multipart/form-data">
-            {% csrf_token %} {% bootstrap_form form %} {% buttons %}
+            {% csrf_token %}
+            {% bootstrap_form user_form %}
+            {% bootstrap_form profile_form %}
+            {% buttons %}
 
-            <button class="boxed-btn3 w-100" type="submit">Post Now</button>
+            <button class="boxed-btn3 w-100" type="submit">Save</button>
             {% endbuttons %}
           </form>
         </div>
